# develop/lambda/api/src/service/ResourcesService.js
@@ -3,16 +3,36 @@
 const { getResource, getSignedUrl } = require("../../umesse/resources");
 
 /**
+ * TTS音声作成
+ * TTS音声を作成する
+ *
+ * body Body_9  (optional)
+ * returns byte[]
+ **/
+exports.createTts = function (body) {
+  return new Promise(function (resolve, reject) {
+    var examples = {};
+    examples["application/json"] = "";
+    if (Object.keys(examples).length > 0) {
+      resolve(examples[Object.keys(examples)[0]]);
+    } else {
+      resolve();
+    }
+  });
+};
+
+/**
  * S3オブジェクトの署名付きURLの取得
  * 試聴再生、音声素材アップロードのURLを取得する
  *
  * id String 音源ID
+ * category String カテゴリー
  * returns inline_response_200
  **/
-exports.getSignedUrl = function (id) {
+exports.getSignedUrl = function (id, category) {
   return new Promise(async function (resolve, reject) {
     var response = {};
-    const json = await getSignedUrl(id);
+    const json = await getSignedUrl(id, category);
     response["application/json"] = json;
     if (Object.keys(response).length > 0 && !json.message) {
       resolve(response[Object.keys(response)[0]]);
@@ -62,6 +82,27 @@ exports.listChime = function () {
 };
 
 /**
+ * TTSフリーワード一覧
+ * TTSのフリーワード素材を一覧で取得する
+ *
+ * industryCd String 業種CD (optional)
+ * sceneCd String シーンCD (optional)
+ * returns List
+ **/
+exports.listFree = function (industryCd, sceneCd) {
+  return new Promise(async function (resolve, reject) {
+    var response = {};
+    const json = await getResource("free", industryCd, sceneCd);
+    response["application/json"] = json;
+    if (Object.keys(response).length > 0 && !json.message) {
+      resolve(response[Object.keys(response)[0]]);
+    } else {
+      reject(response[Object.keys(response)[0]]);
+    }
+  });
+};
+
+/**
  * ナレーション
  * ナレーション素材を一覧で取得する
  *
@@ -90,10 +131,10 @@ exports.listNarration = function (industryCd, sceneCd) {
  * sceneCd String シーンCD (optional)
  * returns List
  **/
-exports.listTts = function (industryCd, sceneCd) {
+exports.listTemplate = function (industryCd, sceneCd) {
   return new Promise(async function (resolve, reject) {
     var response = {};
-    const json = await getResource("tts", industryCd, sceneCd);
+    const json = await getResource("template", industryCd, sceneCd);
     response["application/json"] = json;
     if (Object.keys(response).length > 0 && !json.message) {
       resolve(response[Object.keys(response)[0]]);
